# opendlv.scaledcars

./: .gitignore  instructions.txt  park.sh
Arduino/: T4_car_OLD.ino
Arduino/Led_test/: Led_test.ino
Arduino/T4_car/: T4_car.ino
Arduino/irSensors/: irSensors.ino
Arduino/libs/RcCar/: RcCar.cpp  RcCar.h
DIT-168/: config60  config70  configuration  configuration0  parallel.scnx
code/: CMakeLists.txt
code/Cameraproxy/: CMakeLists.txt
code/Cameraproxy/apps/: cameraproxy.cpp
code/Cameraproxy/src/: OpenCVCamera.cpp  Proxy.cpp  cameraproxy.cpp
code/Cameraproxy/testsuites/: cameraProxyTestSuite.h
code/driver/: CMakeCache.txt  CMakeLists.txt
code/driver/src/: Driver.cpp
code/lanefollow/: CMakeLists.txt
code/lanefollower/: CMakeLists.txt
code/lanefollower/apps/: scaledcars-lanefollower.cpp
code/lanefollower/include/: SerialRead.h  lanefollower.h
code/lanefollower/src/: SerialRead.cpp  lanefollower.cpp  old_LaneFollower.cpp
code/lanefollower/testsuites/: lanefollowerTestSuite.h  old_LaneFollowerTestSuite.h
code/overtaker/: CMakeLists.txt
code/overtaker/apps/: Overtaker.cpp
code/overtaker/include/: Overtaker.h
code/overtaker/src/: Overtaker.cpp
code/overtaker/testsuites/: OvertakerTestSuite.h
code/parking/: CMakeLists.txt
code/parking/apps/: Parking.cpp
code/parking/include/: Parking.h
code/parking/src/: Parking.cpp
code/parking/testsuites/: Parking.h
code/perception/: CMakeCache.txt
code/perception/example/include/: Example.h
code/perception/example/src/: Example.cpp  thebestcodeeverthatworks.cpp
code/proxy/: CMakeLists.txt
code/proxy/include/: Proxy.h  SerialRead.h
code/proxy/src/: Proxy.cpp  SerialRead.cpp
code/scripts/: Overtaker_sim.cpp  lanefollowing_RealCar.sh  overtakingVideo1.sh  overtaking_RealCar.sh  overtaking_Simulator.sh  parking_RealCar.sh  proxy.sh  startCameraScript.sh  testone.sh
docker/: Makefile  completeBuild.sh  docker rmi   incrementalBuild.sh
resources/odvd/: buildOnArm.txt
scenarios/: parallel.scnx
usecases/laneFollowing/: Dockerfile  configuration  docker-compose.yml
